*** netmeta, version 0.9-3, 2017-03-12 ***

 ** Major changes **

  * Calculate indirect treatment estimates based on direct evidence
    proportion

  * Ranking of treatments based on fixed effect model added to
    netrank()

  * new function netsplit() to split direct and indirect evidence

  * new functions netposet(), print.netposet(), and plot.netposet() to
    calculate, print and plot partial ordering of rankings

  * new function hasse() to draw Hasse diagram of partially ordered
    treatment rankings

  * netmeta():
    - can be used with R objects created with pairwise()
    - checks for consistency of treatment effects and variances in
      multi-arm studies

  * Import ginv() from R package MASS (for consistency checks)

  * Suggested packages added (for Hasse diagram):
    - hasseDiagram
    - grid

  * Bug fixes:
    - netmeta() calculates correct direct evidence estimates under
      random effects model (list components 'TE.direct.random',
      'seTE.direct.random', ..., 'pval.direct.random'); so far results
      from fixed effect model have been used
    - netmeta() excludes a treatment from list component 'seq' if all
      comparisons containing the respecitve treatment are excluded due to
      missing values in treatment effect or standard error
    - netmeasures() does not result in an error if no or only one
      study with two treatments is available

 ** User-visible changes **
    
  * New arguments random and tau.preset in netmeasures()

  * New functions netsplit() and print.netsplit()

  * Consider ordering of treatments in netrank() which is defined by
    argument seq in netmeta()

  * For multi-arm studoes, calculate pooled standard deviation in
    pairwise() if means and standard deviations are provided and
    summary measure is equal to "SMD"

 ** Internal changes **

  * netmeta():
    - new list element 'k.direct' with number of studies in
      meta-analyses with direct evidence

  * nma.ruecker():